==> melnijir/avr-butterfly-encx24j600-uip/drivers/encx24j600/enc424j600.c <==
#include "enc424j600.h"
#include "enc424j600conf.h"
#include "avrlibdefs.h"
#include "LCD_driver.h"
#include <avr/iom169.h>
#include <avr/io.h>
#include <util/delay.h>
#define UDA_WINDOW		(0x1)
#define GP_WINDOW		(0x2)
#define RX_WINDOW		(0x4)

void enc424j600Init(void) {
    //Set default bank
    currentBank = 0;

    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);

    sbi(ENC424J600_CONTROL_DDR, ENC424J600_CONTROL_CS);
    sbi(ENC424J600_CONTROL_PORT, ENC424J600_CONTROL_CS);

    sbi(ENC424J600_SPI_PORT, ENC424J600_SPI_SCK); // set SCK hi
    sbi(ENC424J600_SPI_DDR, ENC424J600_SPI_SCK); // set SCK as output
    cbi(ENC424J600_SPI_DDR, ENC424J600_SPI_MISO); // set MISO as input
    sbi(ENC424J600_SPI_DDR, ENC424J600_SPI_MOSI); // set MOSI as output
    sbi(ENC424J600_SPI_DDR, ENC424J600_SPI_SS); // SS must be output for Master mode to work

    // initialize SPI interface
    // master mode
    sbi(SPCR, MSTR);
    // select clock phase positive-going in middle of data
    cbi(SPCR, CPOL);
    // Data order MSB first
    cbi(SPCR, DORD);
    // switch to f/4 2X = f/2 bitrate
    cbi(SPCR, SPR0);
    cbi(SPCR, SPR1);
    sbi(SPSR, SPI2X);
    // enable SPI
    sbi(SPCR, SPE);

    // Perform a reliable reset
    enc424j600SendSystemReset();

    // Initialize RX tracking variables and other control state flags
    nextPacketPointer = RXSTART;

    // Set up TX/RX/UDA buffer addresses
    enc424j600WriteReg(ETXST, TXSTART);
    enc424j600WriteReg(ERXST, RXSTART);
    enc424j600WriteReg(ERXTAIL, RAMSIZE - 2);
    enc424j600WriteReg(EUDAST, RAMSIZE);
    enc424j600WriteReg(EUDAND, RAMSIZE + 1);

    // Get MAC adress
    u16 regValue;
    regValue = enc424j600ReadReg(MAADR1);
    mac_addr.v[0] = ((u08*) & regValue)[0];
    mac_addr.v[1] = ((u08*) & regValue)[1];
    regValue = enc424j600ReadReg(MAADR2);
    mac_addr.v[2] = ((u08*) & regValue)[0];
    mac_addr.v[3] = ((u08*) & regValue)[1];
    regValue = enc424j600ReadReg(MAADR3);
    mac_addr.v[4] = ((u08*) & regValue)[0];
    mac_addr.v[5] = ((u08*) & regValue)[1];

    // If promiscuous mode is set, than allow accept all packets
    #ifdef PROMISCUOUS_MODE
    enc424j600WriteReg(ERXFCON,(ERXFCON_CRCEN | ERXFCON_RUNTEN | ERXFCON_UCEN | ERXFCON_NOTMEEN | ERXFCON_MCEN));
    #endif

    // Set PHY Auto-negotiation to support 10BaseT Half duplex,
    // 10BaseT Full duplex, 100BaseTX Half Duplex, 100BaseTX Full Duplex,
    // and symmetric PAUSE capability
    enc424j600WritePHYReg(PHANA, PHANA_ADPAUS0 | PHANA_AD10FD | PHANA_AD10 | PHANA_AD100FD | PHANA_AD100 | PHANA_ADIEEE0);

    // Enable RX packet reception
    enc424j600BFSReg(ECON1, ECON1_RXEN);
}

static void enc424j600ReadN(u08 op, u08* data, u16 dataLen) {
    // assert CS
    ENC424J600_CONTROL_PORT &= ~(1 << ENC424J600_CONTROL_CS);

    // issue read command
    SPDR = op;
    // wail until all is sent
    while (!(SPSR & (1 << SPIF)));

    while (dataLen--) {
        // wait for answer
        SPDR = 0x00;
        while (!(inb(SPSR) & (1 << SPIF)));
        *data++ = SPDR;
    }

    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);
}

static void enc424j600WriteN(u08 op, u08* data, u16 dataLen) {
    // assert CS
    ENC424J600_CONTROL_PORT &= ~(1 << ENC424J600_CONTROL_CS);

    // issue read command
    SPDR = op;
    // wail until all is sent
    while (!(SPSR & (1 << SPIF)));

    while (dataLen--) {
        // start sending data to SPI
        SPDR = *data++;
        // wail until all is sent
        while (!(SPSR & (1 << SPIF)));
    }

    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);
}

static void enc424j600ExecuteOp0(u08 op) {
    u08 dummy;
    // assert CS
    ENC424J600_CONTROL_PORT &= ~(1 << ENC424J600_CONTROL_CS);

    // issue read command
    SPDR = op;
    // wail until all is sent
    while (!(SPSR & (1 << SPIF)));
    // read answer
    dummy = SPDR;

    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);
}

u08 enc424j600ExecuteOp8(u08 op, u08 data) {
    u08 returnValue;
    // assert CS
    ENC424J600_CONTROL_PORT &= ~(1 << ENC424J600_CONTROL_CS);

    // issue write command
    SPDR = op;
    // wail until all is sent
    while (!(SPSR & (1 << SPIF)));
    // start sending data to SPI
    SPDR = data;
    // wain until all is sent
    while (!(SPSR & (1 << SPIF)));
    // read answer
    returnValue = SPDR;
    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);

    return returnValue;
}

u16 enc424j600ExecuteOp16(u08 op, u16 data) {
    u16 returnValue;
    // assert CS
    // zabereme sbernici
    ENC424J600_CONTROL_PORT &= ~(1 << ENC424J600_CONTROL_CS);

    // issue write command
    SPDR = op;
    // wail until all is sent
    while (!(SPSR & (1 << SPIF)));
    // in this cycle, data are sent
    for (int x = 0; x < 2; x++) {
        // start sending data to SPI
        SPDR = ((u08*) & data)[x];
        // wain until all is sent
        while (!(SPSR & (1 << SPIF)));
        // read answer
        ((u08*) & returnValue)[x] = SPDR;
    }

    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);

    return returnValue;
}

u32 enc424j600ExecuteOp32(u08 op, u32 data) {
    u16 returnValue;
    // assert CS
    ENC424J600_CONTROL_PORT &= ~(1 << ENC424J600_CONTROL_CS);

    // issue write command
    SPDR = op;
    // wail until all is sent
    while (!(SPSR & (1 << SPIF)));
    // in this cycle, data are sent
    for (int x = 0; x < 3; x++) {
        // start sending data to SPI
        SPDR = ((u08*) & data)[x];
        // wain until all is sent
        while (!(SPSR & (1 << SPIF)));
        // read answer
        ((u08*) & returnValue)[x] = SPDR;
    }

    // release CS
    ENC424J600_CONTROL_PORT |= (1 << ENC424J600_CONTROL_CS);

    return returnValue;
}
