==> SimeonSimeonovIvanov/STM32F446_ETH/LWIP/Target/enc424j600/enc424j600.c <==
#include "cmsis_os.h"
#include "semphr.h"
#include "enc424j600.h"
#define UDA_WINDOW				(0x1)
#define GP_WINDOW				(0x2)
#define RX_WINDOW				(0x4)

void enc424j600Init(uint8_t *mac_addr)
{
	if( xSemaphoreTake( myBinarySemSpiHandle, (TickType_t)portMAX_DELAY ) == pdTRUE )
	{
	//Set default bank
	currentBank = 0;
	unselect_net_chip();

	// Perform a reliable reset
	enc424j600SendSystemReset();

	// Initialize RX tracking variables and other control state flags
	nextPacketPointer = RXSTART;

	// Set up TX/RX/UDA buffer addresses
	enc424j600WriteReg(ETXST, TXSTART);
	enc424j600WriteReg(ERXST, RXSTART);
	enc424j600WriteReg(ERXTAIL, RAMSIZE - 2);
	enc424j600WriteReg(EUDAST, RAMSIZE);
	enc424j600WriteReg(EUDAND, RAMSIZE + 1);

	// Get MAC adress
	uint16_t regValue;
	regValue = enc424j600ReadReg(MAADR1);
	mac_addr[0] = ((uint8_t*) & regValue)[0];
	mac_addr[1] = ((uint8_t*) & regValue)[1];
	regValue = enc424j600ReadReg(MAADR2);
	mac_addr[2] = ((uint8_t*) & regValue)[0];
	mac_addr[3] = ((uint8_t*) & regValue)[1];
	regValue = enc424j600ReadReg(MAADR3);
	mac_addr[4] = ((uint8_t*) & regValue)[0];
	mac_addr[5] = ((uint8_t*) & regValue)[1];

	// If promiscuous mode is set, than allow accept all packets
#ifdef PROMISCUOUS_MODE
	enc424j600WriteReg(ERXFCON,(ERXFCON_CRCEN | ERXFCON_MPEN | ERXFCON_RUNTEN | ERXFCON_UCEN | ERXFCON_NOTMEEN | ERXFCON_MCEN | ERXFCON_BCEN));
#endif

	// Set PHY Auto-negotiation to support 10BaseT Half duplex,
	// 10BaseT Full duplex, 100BaseTX Half Duplex, 100BaseTX Full Duplex,
	// and symmetric PAUSE capability
	enc424j600WritePHYReg(PHANA, PHANA_ADPAUS0 | PHANA_AD10FD | PHANA_AD10 | PHANA_AD100FD | PHANA_AD100 | PHANA_ADIEEE0);

	// Enable RX packet reception
	enc424j600BFSReg(ECON1, ECON1_RXEN);
		xSemaphoreGive( myBinarySemSpiHandle );
	}
}

static void enc424j600ReadN(uint8_t op, uint8_t* data, uint16_t dataLen)
{
	select_net_chip();
	HAL_SPI_Transmit( &hspi2, ((uint8_t*)&op), 1, 1000 );
	HAL_SPI_Receive( &hspi2, data, dataLen, 1000 );
	unselect_net_chip();
}

static void enc424j600WriteN(uint8_t op, uint8_t* data, uint16_t dataLen)
{
	select_net_chip();
	HAL_SPI_Transmit( &hspi2, ((uint8_t*)&op), 1, 1000 );
	HAL_SPI_Transmit( &hspi2, data, dataLen, 1000 );
	unselect_net_chip();
}

static void enc424j600ExecuteOp0( uint8_t op )
{
	select_net_chip();
	HAL_SPI_Transmit( &hspi2, ((uint8_t*)&op), 1, 1000 );
	unselect_net_chip();
}

static uint8_t enc424j600ExecuteOp8( uint8_t op, uint8_t data )
{
	uint8_t returnValue = 0;
	uint8_t buffer[2];

	buffer[0] = data;
	buffer[1] = data>>8;

	select_net_chip();
	HAL_SPI_Transmit( &hspi2, ((uint8_t*)&op), 1, 1000 );
	HAL_SPI_TransmitReceive( &hspi2, buffer, ((uint8_t*)&returnValue), 1, 1000 );
	unselect_net_chip();
	return returnValue;
}

static uint16_t enc424j600ExecuteOp16( uint8_t op, uint16_t data )
{
	uint16_t returnValue = 0;
	uint8_t buffer[2];

	buffer[0] = data;
	buffer[1] = data>>8;

	select_net_chip();
	HAL_SPI_Transmit( &hspi2, ((uint8_t*)&op), 1, 1000 );
	HAL_SPI_TransmitReceive( &hspi2, buffer, ((uint8_t*)&returnValue), 2, 1000 );
	unselect_net_chip();
	return returnValue;
}

static uint32_t enc424j600ExecuteOp32( uint8_t op, uint32_t data )
{
	uint32_t returnValue = 0;
	uint8_t buffer[4];

	buffer[0] = data;
	buffer[1] = data>>8;
	buffer[2] = data>>16;
	buffer[3] = data>>24;

	select_net_chip();
	HAL_SPI_Transmit( &hspi2, ((uint8_t*)&op), 1, 1000 );
	HAL_SPI_TransmitReceive( &hspi2, buffer, ((uint8_t*)&returnValue), 3, 100 );
	unselect_net_chip();
	return returnValue;
}
